--- a/ConsumidorControl/src/main/resources/templates/especialidades/verEspecialidad.html
+++ b/ConsumidorControl/src/main/resources/templates/especialidades/verEspecialidad.html
@@ -59,9 +59,9 @@
                                 <label for="curso" class="form-label">Curso</label>
                                 <select class="form-select" id="curso" name="curso" required>
                                     <option value="" disabled selected>Seleccione un curso</option>
-                                    <option value="PRIMERO">Primero</option>
-                                    <option value="SEGUNDO">Segundo</option>
-                                    <option value="TERCERO">Tercero</option>
+                                    <option value="Primero">Primero</option>
+                                    <option value="Segundo">Segundo</option>
+                                    <option value="Tercero">Tercero</option>
                                 </select>
                                 <div class="invalid-feedback">Por favor, seleccione un curso.</div>
                             </div>
