--- a/ConsumidorControl/src/main/resources/templates/formularios/formularioHorario.html
+++ b/ConsumidorControl/src/main/resources/templates/formularios/formularioHorario.html
@@ -39,9 +39,9 @@
                                             <label for="curso" class="form-label">Curso</label>
                                             <select class="form-select" id="curso" name="curso" required>
                                                 <option value="" disabled selected>Seleccione un curso</option>
-                                                <option value="PRIMERO">Primero</option>
-                                                <option value="SEGUNDO">Segundo</option>
-                                                <option value="TERCERO">Tercero</option>
+                                                <option value="Primero">Primero</option>
+                                                <option value="Segundo">Segundo</option>
+                                                <option value="Tercero">Tercero</option>
                                             </select>
                                             <div class="invalid-feedback">Por favor, seleccione un curso.</div>
                                         </div>
@@ -91,11 +91,11 @@
                                                         Selecciona los días
                                                     </button>
                                                     <ul class="dropdown-menu w-100" aria-labelledby="diasDropdown">
-                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="LUNES" id="lunes"> <label class="form-check-label" for="lunes">LUNES</label></li>
-                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="MARTES" id="martes"> <label class="form-check-label" for="martes">MARTES</label></li>
-                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="MIERCOLES" id="miercoles"> <label class="form-check-label" for="miercoles">MIÉRCOLES</label></li>
-                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="JUEVES" id="jueves"> <label class="form-check-label" for="jueves">JUEVES</label></li>
-                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="VIERNES" id="viernes"> <label class="form-check-label" for="viernes">VIERNES</label></li>
+                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="Lunes" id="lunes"> <label class="form-check-label" for="lunes">LUNES</label></li>
+                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="Martes" id="martes"> <label class="form-check-label" for="martes">MARTES</label></li>
+                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="Miércoles" id="miercoles"> <label class="form-check-label" for="miercoles">MIÉRCOLES</label></li>
+                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="Jueves" id="jueves"> <label class="form-check-label" for="jueves">JUEVES</label></li>
+                                                        <li><input class="form-check-input dia-checkbox" type="checkbox" value="Viernes" id="viernes"> <label class="form-check-label" for="viernes">VIERNES</label></li>
                                                     </ul>
                                                 </div>
                                                 <div class="mt-2 selected-days" id="selectedDays"></div>
