--- a/ConsumidorControl/src/main/resources/templates/subirExcel.html
+++ b/ConsumidorControl/src/main/resources/templates/subirExcel.html
@@ -52,17 +52,16 @@
                     </option>
                 </select>
             </div>
-        
+            
             <div class="mb-3">
                 <label for="curso" class="form-label">Curso</label>
                 <select id="curso" name="curso" class="form-select" required>
-                    <option value="PRIMERO">PRIMERO</option>
-                    <option value="SEGUNDO">SEGUNDO</option>
-                    <option value="TERCERO">TERCERO</option>
+                    <option value="Primero">PRIMERO</option>
+                    <option value="Segundo">SEGUNDO</option>
+                    <option value="Tercero">TERCERO</option>
                 </select>
             </div>
             
-        
             <div class="mb-3">
                 <label for="seccion" class="form-label">Sección</label>
                 <select id="seccion" name="seccion" class="form-select" required>
