--- a/ConsumidorControl/src/main/resources/templates/verFormularios.html
+++ b/ConsumidorControl/src/main/resources/templates/verFormularios.html
@@ -65,26 +65,26 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center">
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/alumnos/nuevoAlumno}" class="btn-custom">
-                    <img src="/images/estudiante.png" alt="Formulario Alumno">
-                    Formulario Alumno
+                    <img th:src="@{/images/estudiante.png}" alt="Formulario Alumno">
+                    Nuevo Alumno
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/horarios/nuevoHorario}" class="btn-custom">
-                    <img src="/images/horarionuevo.png" alt="Formulario Horario">
+                    <img th:src="@{/images/horarionuevo.png}" alt="Formulario Horario">
                     Formulario Horario
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/profesores/nuevoProfesor}" class="btn-custom">
-                    <img src="/images/profe.png" alt="Formulario Profesor">
-                    Formulario Profesor
+                    <img th:src="@{/images/profe.png}" alt="Formulario Profesor">
+                    Nuevo Profesor
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/excel/subir-excel}" class="btn-custom">
-                    <img src="/images/excel.png" alt="Formulario alumnado excel">
-                    Formulario Alumnado Excel
+                    <img th:src="@{/images/excel.png}" alt="Formulario alumnado excel">
+                    Nuevo Alumnado Excel
                 </a>
             </div>
         </div>
