--- a/ConsumidorControl/src/main/resources/templates/verTablas.html
+++ b/ConsumidorControl/src/main/resources/templates/verTablas.html
@@ -67,25 +67,25 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 justify-content-center">
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/alumnos/}" class="btn-custom">
-                    <img src="/images/alumnos.png" alt="Ver alumnado">
+                    <img th:src="@{/images/alumnos.png}" alt="Ver alumnado">
                     Alumnado
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/horarios/}" class="btn-custom">
-                    <img src="/images/horario.png" alt="Ver horario de clases">
+                    <img th:src="@{/images/horario.png}" alt="Ver horario de clases">
                     Horarios de Clases
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/profesores/}" class="btn-custom">
-                    <img src="/images/profesor.png" alt="Ver profesores">
+                    <img th:src="@{/images/profesor.png}" alt="Ver profesores">
                     Profesores
                 </a>
             </div>
             <div class="col d-flex justify-content-center">
                 <a th:href="@{/asistencias/}" class="btn-custom">
-                    <img src="/images/asistencias.png" alt="Ver asistencias">
+                    <img th:src="@{/images/asistencias.png}" alt="Ver asistencias">
                     Asistencias
                 </a>
             </div>
