--- a/ConsumidorControl/src/main/resources/templates/errores/403.html
+++ b/ConsumidorControl/src/main/resources/templates/errores/403.html
@@ -54,10 +54,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/no.jpeg" alt="Access Denied" class="error-image">
+        <img th:src="@{/images/no.jpeg}" alt="Access Denied" class="error-image">
         <h1>Acceso Denegado</h1>
         <p>No tienes permiso para entrar a esta pagina.</p>
-        <a th:href="@{/}" class="btn btn-primary">Ir a inicio</a>
+        <a th:href="@{/home}" class="btn btn-primary">Ir a inicio</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
