--- a/ConsumidorControl/src/main/resources/templates/errores/error.html
+++ b/ConsumidorControl/src/main/resources/templates/errores/error.html
@@ -48,10 +48,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/warning.png" alt="Error" class="error-image">
+        <img th:src="@{/images/warning.png}" alt="Error" class="error-image">
         <h1>Oops! Algo salio mal.</h1>
         <p>Lo sentimos, pero se ha producido un error inesperado.</p>
-        <a th:href="@{/}" class="btn btn-primary">Ir al inicio</a>
+        <a th:href="@{/home}" class="btn btn-primary">Ir al inicio</a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
