--- a/ConsumidorControl/src/main/resources/templates/register.html
+++ b/ConsumidorControl/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Best Store</title>
+        <title>Register</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
@@ -16,7 +16,7 @@
                     <div th:if="${success}"
                          class="alert alert-success alert-dismissible fade show" role="alert">
                         <strong>Account Created Successfully!</strong>
-                        <a class="ms-2" href="/login">Login</a>
+                        <a class="ms-2" th:href="@{/login}">Login</a>
                         <button type="button" class="btn-close" data-bs-dismiss="alert"
                                 aria-label="Close"></button>
                     </div> 
@@ -97,7 +97,7 @@
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                             <div class="col-sm-4 d-grid">
-                                <a href="/" class="btn btn-outline-primary">Cancel</a>
+                                <a th:href="@{/home}" class="btn btn-outline-primary">Cancel</a>
                             </div>
                         </div>
                     </form>
