proyecto en estasism objetivos cumplidos, gracias a todas las partes involucradas

--- a/ConsumidorControl/src/main/resources/templates/subirExcel.html
+++ b/ConsumidorControl/src/main/resources/templates/subirExcel.html
@@ -75,7 +75,7 @@
         
             <div class="mb-3">
                 <label for="file" class="form-label">Subir Excel</label>
-                <input type="file" id="file" name="file" class="form-control" required>
+                <input type="file" id="file" name="file" class="form-control" required accept="*.xlsx">
             </div>
         
             <button type="submit" class="btn btn-primary">Cargar Alumnos</button>
